--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "lodash": "4.17.11",
-    "react": "16.8.0-alpha.1",
-    "react-dom": "16.8.0-alpha.1",
-    "react-hot-loader": "^4.6.5",
+    "react": "16.8.1",
+    "react-dom": "16.8.1",
+    "react-hot-loader": "4.6.5",
     "react-scripts": "2.1.3",
     "styled-components": "4.1.3"
   },
